[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/BuildingForSaleSign.escn" type="PackedScene" id=1]
[ext_resource path="res://Buildings/EmptyPlot.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5 )

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0.992157, 1, 0.141176, 0.666667 )

[sub_resource type="CylinderMesh" id=7]
material = SubResource( 6 )

[node name="EmptyPlot" type="Spatial" groups=[
"Plots",
]]
script = ExtResource( 2 )

[node name="Wall1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 4, 0, 0, 0, 20, -2.03341, 2, 3.17106 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall1"]

[node name="CollisionShape" type="CollisionShape" parent="Wall1/StaticBody"]
shape = SubResource( 2 )

[node name="Wall2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 4, 0, 0, 0, 20, -12.5765, 2, 3.17106 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall2"]

[node name="CollisionShape" type="CollisionShape" parent="Wall2/StaticBody"]
shape = SubResource( 3 )

[node name="Wall3" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 10, 0, 4, 0, -1, 0, -4.37114e-07, -7.21448, 2, -6.17371 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall3"]

[node name="CollisionShape" type="CollisionShape" parent="Wall3/StaticBody"]
shape = SubResource( 4 )

[node name="Wall4" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 10, 0, 4, 0, -1, 0, -4.37114e-07, -7.21448, 2, 12.56 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall4"]

[node name="CollisionShape" type="CollisionShape" parent="Wall4/StaticBody"]
shape = SubResource( 5 )

[node name="BuildingOrigin" type="Spatial" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -7.54425, 9.53674e-07, 4.02308 )

[node name="BuildingForSaleSign" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.065661, 9.53674e-07, 0.125036 )

[node name="SelectionRing" type="MeshInstance" parent="BuildingForSaleSign"]
transform = Transform( 1.5, 0, 0, 0, 0.1, 0, 0, 0, 1.5, 0, 0, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="SaleSignStaticBody" type="StaticBody" parent="BuildingForSaleSign"]
transform = Transform( 5, 0, 0, 0, 10, 0, 0, 0, 5, 0, 1.92204, 0 )
collision_layer = 16
collision_mask = 0
